crates/apollo-compiler/test_data/diagnostics/0113_partially_overlapping_fragments.txt
Error: operation must not select different types using the same name `overlapping`
    ╭─[0113_partially_overlapping_fragments.graphql:27:16]
    │
 24 │     ... on B { overlapping }
    │                ─────┬─────  
    │                     ╰─────── `overlapping` is selected from `B.overlapping: Int!` here
    │ 
 27 │     ... on C { overlapping }
    │                ─────┬─────  
    │                     ╰─────── `overlapping` is selected from `C.overlapping: Int` here
────╯

